adding chatbox for B2B AND C2C
