# Routes/Authroutes.js
@@ -15,6 +15,9 @@ const {
   UpdateProfile,
   deleteProfile,
   userPosts,
+  sendMessage,
+  userNotifications,
+  readMessages,
 } = require('../Controllers/users/Authentication.js');
 const {verifyUser} = require('../Middlewares/verifyUser.js');
 router.use(cookieParser());
@@ -28,6 +31,7 @@ router.route('/me').get(verifyUser ,getUserProfile);
 router.route('/forget-password').post(forgetPassword);
 router.route('/reset-password').post(verifyUser ,resetPassword);
 router.route('/allposts').get(verifyUser, userPosts);
+router.route('/messages').post(verifyUser, sendMessage).get(verifyUser, userNotifications).put(verifyUser, readMessages);
 router.route('/:id').get(verifyUser ,getProfileById).put(verifyUser ,UpdateProfile).delete(verifyUser ,deleteProfile);
 
 
